--- a/src/scss/utils/variables.scss
+++ b/src/scss/utils/variables.scss
@@ -7,22 +7,25 @@ $colors: (
   a-grey-25: #e6e7ef,
   a-black: #000000,
   a-white: #ffffff,
-  // bv-white: #ffffff,
-  // bv-primary: #0087db,
-  // bv-success: #497949,
-  // bv-error: #a94949,
-  // bv-warning: #c4a949,
-  // bv-grey-100: #f5f5f5,
-  // sla-grey: #999999,
-  // bv-grey-200: #eaeaea,
-  // bv-grey-500: #b3b3b3,
-  // bv-grey-800: #4b4b4b,
-  // bv-grey-900: #2c2c2c,
-  // bv-inverse-hover: #fbfbfb,
-  // bv-outline-hover: #cee2f8,
-  // bv-overlay-65: rgba(0, 0, 0, 0.65),
-  // bv-overlay-80: rgba(0, 0, 0, 0.8),
-  // bv-toast-border-color: rgba(0, 0, 0, 0.1)
+  a-dark-purple: #211048,
+  a-success: #46cc8d,
+  a-danger: #e41f2d,
+  bv-white: #ffffff,
+  bv-primary: #0087db,
+  bv-success: #497949,
+  bv-error: #a94949,
+  bv-warning: #c4a949,
+  bv-grey-100: #f5f5f5,
+  sla-grey: #999999,
+  bv-grey-200: #eaeaea,
+  bv-grey-500: #b3b3b3,
+  bv-grey-800: #4b4b4b,
+  bv-grey-900: #2c2c2c,
+  bv-inverse-hover: #fbfbfb,
+  bv-outline-hover: #cee2f8,
+  bv-overlay-65: rgba(0, 0, 0, 0.65),
+  bv-overlay-80: rgba(0, 0, 0, 0.8),
+  bv-toast-border-color: rgba(0, 0, 0, 0.1)
 );
 
 $a-shadow: 0px 4px 50px rgba(35, 16, 71, 0.35);
