updates on input components

--- a/src/scss/general/global.scss
+++ b/src/scss/general/global.scss
@@ -147,6 +147,13 @@ body {
   color: #000000 !important;
 }
 
+.text-grey-50 {
+  color: color(a-grey-50);
+}
+.text-grey-25 {
+  color: color(a-grey-25);
+}
+
 .text-white {
   color: #ffffff !important;
 }
