--- a/src/scss/general/global.scss
+++ b/src/scss/general/global.scss
@@ -854,3 +854,11 @@ Text weight
   margin-left: auto !important;
 }
 /*** flex properties ************** */
+
+/*** Horizontal Lines ******* */
+
+.divide {
+  border: 1px solid rgba(37, 37, 37, 0.15);
+  width: 95% !important;
+  margin-top: 2%;
+}
