--- a/src/scss/general/global.scss
+++ b/src/scss/general/global.scss
@@ -178,6 +178,9 @@ body {
   /* identical to box height, or 54px */
   color: #000000;
 }
+.text-black {
+  color: #000000;
+}
 
 .text-bold-white {
   font-family: Avenir;
