--- a/src/scss/utils/variables.scss
+++ b/src/scss/utils/variables.scss
@@ -9,6 +9,7 @@ $colors: (
   a-white: #ffffff,
   a-dark-purple: #211048,
   a-success: #46cc8d,
+  a-warning: #f4a136,
   a-danger: #e41f2d,
   bv-white: #ffffff,
   bv-primary: #0087db,
