--- a/src/scss/general/global.scss
+++ b/src/scss/general/global.scss
@@ -149,6 +149,9 @@ body {
 .text-dark {
   color: #000000 !important;
 }
+.text-pink {
+  color: #b558f9;
+}
 .text-bold-purple {
   font-style: normal;
   font-weight: 800;
