added some components to ft-sidebar

--- a/src/scss/general/global.scss
+++ b/src/scss/general/global.scss
@@ -134,6 +134,9 @@ body {
 .bg-grey-900 {
   background-color: color(a-grey-900) !important;
 }
+.bg-dark-purple {
+  background: #211048 !important;
+}
 /**
 * Overlays
 */
