sidebar and navbar done

--- a/src/scss/utils/variables.scss
+++ b/src/scss/utils/variables.scss
@@ -37,3 +37,5 @@ $fonts: (
 );
 
 $animationDuration: 2s;
+$main-navbar-height: 3.75rem !default;
+$main-footer-height: $main-navbar-height !default;
