--- a/src/scss/general/global.scss
+++ b/src/scss/general/global.scss
@@ -915,3 +915,7 @@ ul.vti__dropdown-list {
     background: #fef4f4 !important;
   }
 }
+
+.main-content > .main-content-container.container-fluid {
+  min-height: calc(100vh - #{$main-navbar-height + $main-footer-height});
+}
