finished sidebar component

--- a/src/scss/utils/variables.scss
+++ b/src/scss/utils/variables.scss
@@ -5,6 +5,7 @@ $colors: (
   a-blue: linear-gradient(95.36deg, #01cbff 1.64%, #0193ff 100%),
   a-grey-50: #cccfdf,
   a-grey-25: #e6e7ef,
+  a-purple-color: #b558f9,
   a-black: #000000,
   a-white: #ffffff,
   a-dark-purple: #211048,
