--- a/src/scss/general/global.scss
+++ b/src/scss/general/global.scss
@@ -915,3 +915,27 @@ ul.vti__dropdown-list {
     background: #fef4f4 !important;
   }
 }
+
+.clear-line {
+  padding-top: 15px !important;
+  padding-bottom: 15px !important;
+}
+
+.alaje-badge {
+  border-radius: 5px;
+  display: flex;
+  flex-direction: row;
+  padding: 8px 10px;
+  &-success {
+    background: linear-gradient(95.36deg, rgba(3, 218, 141, 0.15) 1.64%, rgba(9, 239, 163, 0.15) 100%);
+    color: #09efa3 !important;
+  }
+  &-pending {
+    background: linear-gradient(95.36deg, rgba(1, 203, 255, 0.15) 1.64%, rgba(1, 147, 255, 0.15) 100%);
+    color: #0193ff !important;
+  }
+  &-cancel {
+    background: linear-gradient(95.36deg, rgba(244, 161, 54, 0.15) 1.64%, rgba(252, 208, 0, 0.15) 100%);
+    color: #fcd000 !important;
+  }
+}
