--- a/src/scss/general/global.scss
+++ b/src/scss/general/global.scss
@@ -155,6 +155,14 @@ body {
 .text-pink {
   color: #b558f9;
 }
+.text-bold-pink {
+  color: #b558f9;
+  font-style: normal;
+  font-weight: 800;
+  font-size: 16px;
+  line-height: 119.6%;
+  text-align: center;
+}
 .text-bold-purple {
   font-style: normal;
   font-weight: 800;
