--- a/src/scss/general/global.scss
+++ b/src/scss/general/global.scss
@@ -1,5 +1,5 @@
 //@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,100&display=swap");
-@import url("https://github.com/Papillard/Avenir");
+//@import url("https://github.com/Papillard/Avenir");
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap");
 
 * {
