--- a/src/scss/utils/variables.scss
+++ b/src/scss/utils/variables.scss
@@ -34,7 +34,7 @@ $a-shadow: 0px 4px 50px rgba(35, 16, 71, 0.35);
 
 $fonts: (
   // bv-montserrat: "Montserrat",
-    alaje-avenir: "avenir"
+    Avenir: "avenir"
 );
 
 $animationDuration: 2s;
