wallet page done

--- a/src/scss/general/global.scss
+++ b/src/scss/general/global.scss
@@ -3,7 +3,7 @@
 
 @font-face {
   font-family: "Avenir";
-  src: url("~@/assets/avenir-font/Avenir-Roman.ttf");
+  src: url("~@/assets/avenir-font/Avenir-Book.ttf");
 }
 
 * {
@@ -165,7 +165,7 @@ body {
   font-weight: 800;
   font-size: 16px;
   line-height: 119.6%;
-  text-align: center;
+  font-family: fonts(Avenir);
 }
 .text-bold-purple {
   font-style: normal;
@@ -997,4 +997,14 @@ ul.vti__dropdown-list {
   border: 1px solid #e6e7ef;
   box-sizing: border-box;
   border-radius: 20px;
+}
+
+.box-title {
+  font-family: fonts(Avenir);
+  font-style: normal;
+  font-weight: 900 !important;
+  font-size: 24px;
+  line-height: 119.6%;
+  /* identical to box height, or 29px */
+  color: #000000;
 }
