--- a/src/scss/general/global.scss
+++ b/src/scss/general/global.scss
@@ -199,7 +199,7 @@ body {
 }
 
 .text-bold-black {
-  font-family: Roboto;
+  font-family: fonts(Avenir);
   font-style: normal;
   font-weight: 900;
   font-size: 36px;
